media added for mobile devices

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -441,7 +441,7 @@ footer{
 }
 .brand-container button{
     height: 130px;
-    background-color:rgb(206, 204, 208);
+    background-color:rgb(211, 195, 176);
     width: 180px;
     border: 1px solid goldenrod;
     border-radius: 40px;
@@ -618,8 +618,97 @@ footer{
     width: 90px;
     font-size: 13px;
 }
+/*BRAND*/
+.brand{
+    padding: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
+ .brand h2{
+    font-size: 20px;
+    text-align: left;
+ }
+.brand-container{
+    justify-content: space-between;
+}
+.brand-container img {
+    height: 40px;
+    width: 40px;
+}
+.brand-container button{
+   height: 68px;
+   width: 90px;
+   cursor: pointer;
+}
+.brand-container button:hover{
+background-color: rgba(255, 255, 255, 0.551);
+}
+/*ABOUT*/
+.about{
+    height: 150px;
+    width: 460px;
+    padding-top: 10px;
+    margin-left: 10px;
+    margin-right: 5px;
+}
+.about-container{
+    font-size: 10px;
+}
+.about-container img{
+    height: 40px;
+    width: 40px;
+}
+.about-container p{
+}
+.about h2{
+    font-size: 14px;
+}
+/*FOOTER*/
 
-
-/* MEDIA QUERIES*?
-/* Small Devices */
+.footer{
+    background-color: #a6e4d1;
+    height: 250px;
+    width: 570px;
+    padding: 0;
+    padding-top: 20px;
+}
+.footer a{
+    font-size: 15px;
+    padding: 0;
+}
+.second{
+    flex-grow: .5;
+    padding-left: 30px;
+}
+.second input{
+    width: 170px;
+    height: 30px;
+}
+.second button{
+    width: 140px;
+    padding: 0;
+    height: 40px;
+    font-size: 12px;
+}
+.third{
+    padding: 0;
+    font-size: 10px;
+}
+.first{
+    padding-left: 10px;
+}
+.footer h3 {
+    font-size: 10px;
+}
+.footer .first h3, .footer .second h3, .footer .third h3 {
+    font-size: 15px !important;
+}
+.footer .third p span {
+    font-size: 13px !important;
+}
+.footer .third p {
+    text-align: center;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+}
