--- a/CSS/index.css
+++ b/CSS/index.css
@@ -449,231 +449,237 @@ footer{
 
 /* MEDIA */
 /* normal DEVIDE*/
-@media screen and (max-width: 480px) and (min-width: 599px){
-        nav {
-            padding: 10px;
-        }
-        .logo{
-            font-size: 7px;
-        }
-        .menu li a {
-        font-size: 6px;
-        }
-        .menu li {
-            margin: 0px 0;
-        }
-        .logo {
-            margin-left: 10px;
-        }
-         .dropbtn{
-            font-size: 10px;
-         }
-        .dropdown-content {
-            font-size: 10px;
-            box-shadow: none;
-            border-radius: 1px solid gold;
-            width: auto;
-        }
-        
-        .arrow {
-            float:none;
-        }
-        /*CONTENT*/
-         .main{
-            background-image: none;
-            height: 500px;
-            text-align: center;
-         }
-        .ideal {
-            text-align: left;
-            line-height: 44px;
-            padding-right: 500px;
-            padding-bottom: 170px;
-        }
-        .ideal h1 {
-            font-size: 24px;
-        }
-        .ideal h2{
-            font-size: 20px;
-        }
-        .ideal b {
-            font-size: 27px;
-        }
-        .ideal .downlaod { 
-            font-size: 14px;
-            width: 100px;
-        }
-        .feature{
-            padding-bottom: 5px;
-        }
-        /*CONTAINER*/
-        
-         .container p{
-            font-size: 14px;
-         }
-         .container h1{
-            font-size: 20px;
-            line-height: 10px;
-         }
-         .container{
-            border-radius: 20px;
-            width:230px;
-            height: 280px;
-            padding-bottom: 20px;
-         }
-         .container img{
-            height: 60px;
-            padding-left: 80px;
-            width: 60px;
-         }
-         /*VIDEO*/
-           
-         .video video {
-            height: 250px;
-            margin-top:40px;
-         }
-         .video h1{
-            display: none;
-         }
-        .card {
-            display: flex;
-            flex-direction: row;
-            height: 360px;
-          }
-        .card img {
-            border-radius: 14px 14px 0 0;
-            height: 120px;
-          } 
-          .card div {
-          padding: 0;
-          }
-         .card h2 {
+
+@media screen and (min-width: 480px) and (max-width: 599px) {
+    nav {
+        padding: 0px;
+    }
+    .logo{
+        font-size: 9px;
+        margin-left: 5px;
+    }
+    .menu li a {
+        letter-spacing: 1px;
+        font-size: 8px !important;
+    }
+    .menu li {
+        margin: 0px 0;
+    }
+    .dropbtn{
+        font-size: 8px;
+    }
+    .dropdown-content {
+        font-size: 8px;
+        box-shadow: none;
+        border-radius: 1px solid gold;
+        width: auto;
+    }
+    .arrow {
+        float: none;
+    }
+    /* CONTENT */
+    .main {
+        background-image: none;
+        height: 350px;
+        text-align: center;
+    }
+    .ideal {
+        text-align: start;
+        line-height: 30px;
+        padding-right:400px;
+        padding-bottom: 380px;
+    }
+    .ideal h1 {
+        font-size: 18px;
+    }
+    .ideal h3{
+        font-size: 10px;
+    }
+    .ideal h2 {
+        font-size: 15px;
+    }
+    .ideal b {
+        font-size: 17px;
+    }
+    .ideal .download {
+        font-size: 10px !important;
+        width: 15px !important;
+    }
+    .feature {
+        padding-bottom: 5px;
+        font-size: 10px;
+    }
+    /* CONTAINER */
+    .container p {
+        font-size: 14px;
+    }
+    .container h1 {
         font-size: 20px;
-         }
-        .card p {
-           text-align: center;
-           font-size: 14px;
-        }
-        .card h4 {
+        line-height: 10px;
+    }
+    .container {
+        border-radius: 20px;
+        width: 230px;
+        height: 280px;
+        padding-bottom: 20px;
+    }
+    .container img {
+        height: 60px;
+        padding-left: 80px;
+        width: 60px;
+    }
+    /* VIDEO */
+    .video video {
+        height: 250px;
+        margin-top: 40px;
+    }
+    .video h1 {
+        display: none;
+    }
+    .card {
+        display: flex;
+        flex-direction: row;
+        height: 360px;
+    }
+    .card img {
+        border-radius: 14px 14px 0 0;
+        height: 120px;
+    }
+    .card div {
+        padding: 0;
+    }
+    .card h2 {
+        font-size: 20px;
+    }
+    .card p {
+        text-align: center;
+        font-size: 14px;
+    }
+    .card h4 {
         font-size: 16px;
-         }
-       .card-footer button {
+    }
+    .card-footer button {
         font-size: 14px;
         width: 110px;
     }
-    .offer{
-       background-size: 330px;
-       height: 300px;
-       height: 180;
-       background-color: rgb(20, 20, 20);
-       background-image: url(./../Images/basket.jpg);
+    .offer {
+        background-size: 330px;
+        height: 270px;
+        height: 190;
+        background-size: 400px;
+        background-color: rgb(20, 20, 20);
+        background-image: url(./../Images/basket.jpg);
     }
-    .sell img{
-        height: 60px;
+    .sell img {
+        height: 50px;
+        padding-top: 10px;
     }
-    .sell{
-        font-size: 11px;
+    .sell {
+        font-size: 10px;
         padding-right: 30px;
         text-align: right;
         padding-top: 0;
     }
-    .sell button{
+    .sell button {
         width: 90px;
         font-size: 13px;
     }
-    /*BRAND*/
-    .brand{
+    /* BRAND */
+    .brand {
         padding: 20px;
         margin-left: 10px;
         margin-right: 10px;
     }
-     .brand h2{
+    .brand h2 {
         font-size: 20px;
         text-align: left;
-     }
-    .brand-container{
+    }
+    .brand-container {
         justify-content: space-between;
     }
     .brand-container img {
-        height: 40px;
-        width: 40px;
+        height: 30px;
+        width: 30px;
     }
-    .brand-container button{
-       height: 68px;
-       width: 90px;
-       cursor: pointer;
+    .brand-container button {
+        height: 68px;
+        width: 90px;
+        cursor: pointer;
     }
-    .brand-container button:hover{
-    background-color: rgba(255, 255, 255, 0.551);
+    .brand-container button:hover {
+        background-color: rgba(255, 255, 255, 0.551);
     }
-    /*ABOUT*/
-    .about{
+    /* ABOUT */
+    .about {
         height: 150px;
-        width: 460px;
-        padding-top: 10px;
+        width: 350px;
+        padding-top: 8px;
         margin-left: 10px;
         margin-right: 5px;
+    
     }
-    .about-container{
-        font-size: 10px;
+    .about-container {
+        font-size: 8px;
+        text-align: left;
     }
-    .about-container img{
+    .about-container img {
         height: 40px;
         width: 40px;
     }
-    
-    .about h2{
-        font-size: 14px;
-    }
-    /*FOOTER*/
-    
-    .footer{
-        background-color: #a6e4d1;
-        height: 250px;
-        width: 570px;
-        padding: 0;
-        padding-top: 20px;
-    }
-    .footer a{
-        font-size: 15px;
-        padding: 0;
-    }
-    .second{
-        flex-grow: .5;
-        padding-left: 30px;
-    }
-    .second input{
-        width: 170px;
-        height: 30px;
-    }
-    .second button{
-        width: 140px;
-        padding: 0;
-        height: 40px;
+    .about h2 {
         font-size: 12px;
     }
-    .third{
+    /* FOOTER */
+    .footer {
+        background-color: #a6e4d1;
+        height: 220px;
+        width: 480px;
         padding: 0;
-        font-size: 10px;
+        padding-top: 10px;
+    }
+    .footer a {
+        font-size: 12px;
+        padding: 0;
     }
     .first{
-        padding-left: 10px;
+        padding-top: 10px;
     }
-    .footer h3 {
+    .second {
+        flex-grow: 0.9;
+        padding-top: 10px;
+        padding-left: 20px;
+    }
+    .second input {
+        width: 150px;
+        height: 30px;
+    }
+    .second button {
+        width: 100px;
+        padding: 0;
+        height: 40px;
         font-size: 10px;
     }
+    .third {
+        padding: 10px;
+        font-size: 10px;
+    }
+    .first {
+        padding-left: 10px;
+    }
+    
     .footer .first h3, .footer .second h3, .footer .third h3 {
-        font-size: 15px !important;
+        font-size: 13px !important;
     }
     .footer .third p span {
-        font-size: 13px !important;
+        font-size: 12px !important;
     }
     .footer .third p {
         text-align: center;
         padding-left: 10px;
         padding-right: 10px;
     }
-    }
+}
+
 
 /* Mobile Devices */
 @media screen and (min-width: 600px) and (max-width: 768px) {
@@ -901,3 +907,465 @@ background-color: rgba(255, 255, 255, 0.551);
     padding-right: 10px;
 }
 }
+
+/*TABLET DEVICE*/
+@media screen and (min-width: 769px) and (max-width: 992px) {
+    nav {
+        padding: 10px;
+    }
+    .logo {
+        font-size: 18px;
+        margin-left: 10px;
+    }
+    .menu li a {
+        font-size: 15px !important;
+    }
+    .menu li {
+        margin: 0px 0;
+    }
+    .dropbtn {
+        font-size: 15px;
+    }
+    .dropdown-content {
+        font-size: 14px;
+        box-shadow: none;
+        border-radius: 1px solid gold;
+        width: auto;
+    }
+    .arrow {
+        float: none;
+    }
+    /* CONTENT */
+    .main {
+        background-size: 500px;
+        height: 400px;
+        background-position: right center;
+        text-align: center;
+    }
+    .ideal {
+        text-align: left;
+        line-height: 35px;
+        padding-right: 900px;
+        padding-bottom: 340px;
+    }
+    .ideal h1 {
+        font-size: 20px;
+    }
+    .ideal h2 {
+        font-size: 15px;
+    }
+    .ideal h3{
+        font-size:20px !important;
+    }
+    .ideal b {
+        font-size: 20px;
+    }
+    .ideal .downlaod {
+        font-size: 14px;
+        height: 40px;
+        width: 100px !important;
+    }
+    .feature {
+        padding-bottom: 5px;
+    }
+    .heading{
+        font-size: 25px;
+    }
+    /* CONTAINER */
+    .container p {
+        font-size: 14px;
+    }
+    .container h1 {
+        font-size: 20px;
+        line-height: 8px;
+    }
+    .container {
+        border-radius: 20px;
+        width: 230px;
+        height: 280px;
+        padding-bottom: 20px;
+    }
+    .container img {
+        height: 50px;
+        padding-left: 90px;
+        width: 50px;
+    }
+    /* VIDEO */
+    .video video {
+        height: 250px;
+        margin-top: 40px;
+    }
+    
+    .video h1 {
+        display: none;
+    }
+    .card {
+        display: flex;
+        flex-direction: row;
+        height: 360px;
+    }
+    .card img {
+        border-radius: 14px 14px 0 0;
+        height: 120px;
+    }
+    .card div {
+        padding: 0;
+    }
+    .card h2 {
+        font-size: 20px;
+    }
+    .card p {
+        text-align: center;
+        font-size: 14px;
+    }
+    .card h4 {
+        font-size: 16px;
+    }
+    .card-footer button {
+        font-size: 14px;
+        width: 110px;
+    }
+    .offer {
+        background-size: 390px;
+        height: 270px;
+        background-color: rgb(14, 14, 14);
+        background-image: url(./../Images/basket.jpg);
+    }
+    .sell img {
+        height: 50px;
+    }
+    .sell {
+        font-size: 11px;
+        padding-right: 30px;
+        text-align: right;
+        padding-top: 0;
+    }
+    .sell button {
+        width: 90px;
+        font-size: 13px;
+    }
+    /* BRAND */
+    .brand {
+        padding: 20px;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+    .brand h2 {
+        font-size: 20px;
+        text-align: left;
+    }
+    .brand-container {
+        justify-content: space-between;
+    }
+    .brand-container img {
+        height: 40px;
+        width: 40px;
+    }
+    .brand-container button {
+        height: 72px;
+        width: 100px;
+        cursor: pointer;
+    }
+    .brand-container button:hover {
+        background-color: rgba(255, 255, 255, 0.551);
+    }
+    /* ABOUT */
+    .about {
+        height: 150px;
+        width: 600px;
+        padding-top: 10px;
+        margin-left: 10px;
+        margin-right: 5px;
+    }
+    .about-container {
+        font-size: 12px;
+    }
+    .about-container img {
+        height: 40px;
+        width: 40px;
+    }
+    .about h2 {
+        font-size: 14px;
+    }
+    /* FOOTER */
+    .footer {
+        background-color: #a6e4d1;
+        height: 250px;
+        width: 730px;
+        padding: 0;
+        padding-top: 20px;
+    }
+    .footer a {
+        font-size: 15px;
+        padding: 0;
+    }
+    .second {
+        flex-grow: 0.5;
+        padding-left: 30px;
+    }
+    .second input {
+        width: 170px;
+        height: 30px;
+    }
+    .second button {
+        width: 140px;
+        padding: 0;
+        height: 40px;
+        font-size: 12px;
+    }
+    .third {
+        padding: 0;
+        font-size: 10px;
+    }
+    .first {
+        padding-left: 40px;
+    }
+    .footer h3 {
+        font-size: 10px;
+    }
+    .footer .first h3, .footer .second h3, .footer .third h3 {
+        font-size: 15px !important;
+    }
+    .footer .third p span {
+        font-size: 13px !important;
+    }
+    .footer .third p {
+        text-align: center;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+}
+/*LARGE DEVICE*/
+    @media screen and (min-width: 993px) and (max-width: 1200px) {
+        nav {
+            padding: 10px;
+        }
+        .logo {
+            font-size: 20px;
+            margin-left: 10px;
+        }
+        .menu li a {
+            font-size: 17px !important;
+        }
+        .menu li {
+            margin: 0px 0;
+        }
+        .dropbtn {
+            font-size: 17px;
+        }
+        .dropdown-content {
+            font-size: 15px;
+            box-shadow: none;
+            border-radius: 1px solid gold;
+            width: auto;
+        }
+        .arrow {
+            float: none;
+        }
+        /* CONTENT */
+        .main {
+            background-position: right center;
+            height: 500px;
+            background-size: 800px;
+            text-align: center;
+        }
+        .ideal {
+            text-align: left;
+            line-height: 44px;
+            padding-right: 900px;
+            padding-bottom: 170px;
+        }
+        .ideal h1 {
+            font-size: 24px;
+        }
+        .ideal h2 {
+            font-size: 20px;
+        }
+        .ideal b {
+            font-size: 27px;
+        }
+        .ideal .download {
+            font-size: 14px;
+            width: 100px;
+        }
+        .feature {
+            padding-bottom: 5px;
+        }
+        .heading{
+            font-size: 26px;
+        }
+        /* CONTAINER */
+        .container p {
+            font-size: 13px;
+        }
+        .container h1 {
+            font-size: 18px;
+            line-height: 10px;
+        }
+        .container {
+            border-radius: 20px;
+            width: 190px;
+            height: 280px;
+            padding-bottom: 20px;
+        }
+        .container img {
+            height:55px;
+            padding-left: 70px;
+            width: 55px;
+        }
+        /* VIDEO */
+        .video{
+            padding-left: 150px;
+        }
+        .video video {
+            height: 300px;
+            margin-top: 40px;
+        
+        }
+        .video h1 {
+            display: none;
+        }
+        .card {
+            display: flex;
+            flex-direction: row;
+            height: 380px;
+            width: 270px;
+        }
+        .card img {
+            border-radius: 14px 14px 0 0;
+            height: 150px;
+            width: 270px;
+        }
+        .card div {
+            padding: 0;
+        }
+        .card h2 {
+            font-size: 23px;
+        }
+        .card p {
+            text-align: center;
+            font-size: 14px;
+        }
+        .card h4 {
+            padding-left: 100px;
+            font-size: 16px;
+        }
+        .card-footer button {
+            font-size: 14px;
+            width: 110px;
+        }
+        .offer {
+            background-size: 450px;
+            height: 320px;
+            padding-left: 0px;
+            background-color: rgb(20, 20, 20);
+            background-image: url(./../Images/basket.jpg);
+        }
+        .sell img {
+            height: 60px;
+            padding-top: 20px;
+        }
+        .sell {
+            font-size: 11px;
+            padding-right: 30px;
+            text-align: right;
+            padding-top: 0;
+        }
+        .sell button {
+            width: 90px;
+            font-size: 13px;
+        }
+        /* BRAND */
+        .brand {
+            padding: 20px;
+            margin-left: 10px;
+            margin-right: 10px;
+        }
+        .brand h2 {
+            font-size: 25px;
+            text-align: left;
+        }
+        .brand-container {
+            justify-content: space-around;
+        }
+        .brand-container img {
+            height: 40px;
+            width: 40px;
+        }
+        .brand-container button {
+            height: 80px;
+            width: 120px;
+            cursor: pointer;
+        }
+        .brand-container button:hover {
+            background-color: rgba(255, 255, 255, 0.551);
+        }
+        /* ABOUT */
+        .about {
+            height: 150px;
+            width: 860px;
+            padding-top: 10px;
+            margin-left: 10px;
+            margin-right: 5px;
+        }
+        .about-container {
+            font-size: 10px;
+        }
+        .about-container img {
+            height: 40px;
+            width: 40px;
+        }
+        .about h2 {
+            font-size: 14px;
+        }
+        /* FOOTER */
+        .footer {
+            background-color: #a6e4d1;
+            height: 250px;
+            width: 950px;
+            padding: 0;
+            padding-top: 60px;
+        }
+        .footer a {
+            font-size: 15px;
+            padding: 0;
+        }
+        .second {
+            flex-grow: 0.5;
+            padding-left: 50px;
+        }
+        .second input {
+            width: 170px;
+            height: 30px;
+        }
+        .second button {
+            width: 140px;
+            padding: 0;
+            height: 40px;
+            font-size: 12px;
+        }
+        .third {
+            padding: 0;
+            font-size: 10px;
+        }
+        .first {
+            padding-left: 90px;
+        }
+        .footer h3 {
+            font-size: 10px;
+        }
+        .footer .first h3, .footer .second h3, .footer .third h3 {
+            font-size: 15px !important;
+        }
+        .footer .third p span {
+            font-size: 13px !important;
+        }
+        .footer .third p {
+            text-align: center;
+            padding-left: 10px;
+            padding-right: 10px;
+        }
+    
+    }
+
+
