--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -452,6 +452,7 @@ footer{
     padding: 20px 0 0 0;
     width: 100%;
     height: 40px;
+    font-size: 20px;
     text-align: center;
     position: sticky;
     top: 40px;
