--- a/CSS/index.css
+++ b/CSS/index.css
@@ -446,6 +446,9 @@ footer{
     border: 1px solid goldenrod;
     border-radius: 40px;
 }
+.brand-container button:hover {
+    background-color: rgba(255, 255, 255, 0.551);
+}
 
 /* MEDIA */
 /* normal DEVIDE*/
