--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -4,8 +4,8 @@ body {
 }
 
 .form {
-    width: 340px;
-    height: 440px;
+    width: 470px;
+    height: 580px;
     background: #e6e6e6;
     border-radius: 8px;
     box-shadow: 0 0 30px -10px #65b5c0;
@@ -50,7 +50,7 @@ p:before {
     color: #5a5a5a;
 }
 
-button {
+.b1 {
     float: right;
     padding: 8px 12px;
     margin: 8px 0 0;
